--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
     <div class="modal-dialog modal-dialog-centered" id="accio-modal">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">New Modal</h5>
+          <h5 class="modal-title" id="newton-modal">New Modal</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
