--- a/main.html
+++ b/main.html
@@ -10,23 +10,23 @@
 </head>
 <body>
     <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newton-modal" id="open-modal">
-    Launch newton modal
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#new-modal" id="open-modal">
+    launch newton-modal
   </button>
   
   <!-- Modal -->
-  <div class="modal fade" id="newton-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" id="accio-modal">
-      <div class="modal-content modal">
+  <div class="modal fade" id="new-modal"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered " id="accio-modal">
+      <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title show" id="staticBackdropLabel">New Modal</h5>
+          <h5 class="modal-title show " id="staticBackdropLabel">New Modal</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body modal-dialog">
+        <div class="modal-body modal-dailog">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate similique numquam ducimus dolorum? At repellendus assumenda veniam laborum exercitationem unde praesentium quasi. Rerum aliquam impedit similique quasi eaque magni nostrum.
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary show" data-bs-dismiss="modal">Close</button>
           <!-- <button type="button" class="btn btn-primary">Understood</button> -->
         </div>
       </div>
