--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#new-modal" id="open-modal">
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newton-modal" id="open-modal">
     launch newton-modal
   </button>
   
   <!-- Modal -->
-  <div class="modal fade" id="new-modal"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal fade" id="newton-modal"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered " id="accio-modal">
       <div class="modal-content">
         <div class="modal-header">
